--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.1.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-contenteditable": "^3.3.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-is": "^18.2.0",
