--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "@types/lodash": "^4.14.186",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.1.2",
+    "framer-motion": "^8.4.0",
+    "howler": "^2.2.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.6",
@@ -19,9 +21,11 @@
     "react-icons": "^4.4.0",
     "react-is": "^18.2.0",
     "react-router-dom": "^6.4.2",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@types/howler": "^2",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
