--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "typescript": "4.8"
   },
-  "packageManager": "yarn@3.2.4",
-  "dependencies": {
-    "@types/xml2js": "^0.4.11",
-    "xml2js": "^0.4.23"
-  }
+  "workspaces": [
+    "./client",
+    "./server"
+  ],
+  "packageManager": "yarn@3.2.4"
 }
