--- a/server/package.json
+++ b/server/package.json
@@ -1,30 +1,29 @@
 {
   "name": "server",
-  "packageManager": "yarn@3.2.4",
-  "devDependencies": {
-    "@koa/cors": "^4.0.0",
-    "@types/koa": "^2.13.5",
-    "@types/koa-bodyparser": "^4.3.8",
-    "@types/koa-router": "^7.4.4",
-    "@types/koa-static": "^4.0.2",
-    "@types/koa__cors": "^3.3.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+  "private": true,
+  "version": "0.1.0",
+  "description": "A Strapi application",
+  "scripts": {
+    "develop": "strapi develop",
+    "start": "strapi start",
+    "build": "strapi build",
+    "strapi": "strapi"
   },
   "dependencies": {
-    "koa": "^2.13.4",
-    "koa-bodyparser": "^4.3.0",
-    "koa-router": "^12.0.0",
-    "koa-static": "^5.0.0",
-    "mongodb": "^4.10.0",
-    "mongoose": "^6.6.5",
-    "tslog": "^3.3.4",
-    "zod": "^3.19.1"
+    "@strapi/plugin-i18n": "4.5.5",
+    "@strapi/plugin-users-permissions": "4.5.5",
+    "@strapi/strapi": "4.5.5",
+    "better-sqlite3": "7.4.6"
   },
-  "scripts": {
-    "dev": "ts-node src",
-    "build": "tsc",
-    "setup": "ts-node src/script/convert",
-    "prod": "node dist"
-  }
+  "author": {
+    "name": "A Strapi developer"
+  },
+  "strapi": {
+    "uuid": "9cf61bb8-9b05-4f6b-8de5-310dea3455e1"
+  },
+  "engines": {
+    "node": ">=14.19.1 <=18.x.x",
+    "npm": ">=6.0.0"
+  },
+  "license": "MIT"
 }
