--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@types/lodash": "^4.14.186",
     "@types/styled-components": "^5.1.26",
-    "axios": "^1.1.2",
+    "axios": "^1.2.2",
     "framer-motion": "^8.4.0",
     "howler": "^2.2.3",
     "lodash": "^4.17.21",
@@ -21,6 +21,7 @@
     "react-icons": "^4.4.0",
     "react-is": "^18.2.0",
     "react-router-dom": "^6.4.2",
+    "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
     "zod": "^3.20.2"
   },
