--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,10 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-documentation": "^4.5.5",
-    "@strapi/plugin-i18n": "4.5.5",
-    "@strapi/plugin-users-permissions": "4.5.5",
-    "@strapi/strapi": "4.5.5",
+    "@strapi/plugin-documentation": "^4.5.6",
+    "@strapi/plugin-i18n": "^4.5.6",
+    "@strapi/plugin-users-permissions": "^4.5.6",
+    "@strapi/strapi": "^4.5.6",
     "better-sqlite3": "7.4.6",
     "react-select": "^5.7.0"
   },
