--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "prettier": "^2.7.1",
     "typescript": "4.8"
   },
+  "scripts": {
+    "dev": "yarn workspaces foreach -pi run dev"
+  },
   "workspaces": [
     "./client",
     "./server"
