--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
-version: '3'
+version: "3"
 services:
   muvel:
     ports:
       - "127.0.0.1:8080:8080"
     build:
       context: .
-#    deploy:
-#      replicas: $TOTAL_REPLICAS
+    #    deploy:
+    #      replicas: $TOTAL_REPLICAS
     depends_on:
       - db
-#    volumes:
-#      - /run/docker.sock:/run/docker.sock:ro
-#      - ../config.deploy.json:/app/config.json:ro
-#      - ./logs:/app/logs:rw
+    #    volumes:
+    #      - /run/docker.sock:/run/docker.sock:ro
+    #      - ../config.deploy.json:/app/config.json:ro
+    #      - ./logs:/app/logs:rw
     restart: unless-stopped
 
   db:
