--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "mirgrate": "yarn build && yarn typeorm migration:generate src/migrations/init -d datasource.js && yarn build && yarn typeorm migration:run -d datasource.js"
+    "migrate": "yarn build && yarn typeorm migration:generate src/migrations/init -d datasource.js && yarn build && yarn typeorm migration:run -d datasource.js"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
