🚀 change db container name to 'muvel-db'

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,4 @@
-DB_URL=postgresql://postgres:password@host:port/database
+DB_URL=postgresql://postgres:password@muvel-db:5432/database
 
 JWT_SECRET=secret
 
