--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       context: .
       dockerfile: Dockerfile
     depends_on:
-      - db
+      - muvel-db
 
   muvel-db:
     image: postgres
