🚀 change default database to muvel

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - pg-data:/data/db
     environment:
       - POSTGRES_PASSWORD=paring
+      - POSTGRES_DB=muvel
 
 volumes:
   pg-data:
