--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,6 +8,7 @@ services:
       - pg-data:/data/db
     environment:
       - POSTGRES_PASSWORD=paring
+      - POSTGRES_DB=muvel
 
 volumes:
   pg-data:
