--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,4 @@
-DB_URL=postgresql://postgres:password@muvel-db:5432/muvel
+DB_URL=postgresql://postgres:password@db:5432/muvel
 
 JWT_SECRET=secret
 
