--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - pg-data:/data/db
     environment:
       - POSTGRES_PASSWORD=paring
-      - POSTGRES_DATABASE=muvel
+      - POSTGRES_DB=muvel
 
 volumes:
   pg-data:
