--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@editorjs/checklist": "^1.4.0",
+    "@editorjs/code": "^2.8.0",
+    "@editorjs/delimiter": "^1.3.0",
+    "@editorjs/editorjs": "^2.26.4",
+    "@editorjs/embed": "^2.5.3",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/image": "^2.8.1",
+    "@editorjs/inline-code": "^1.4.0",
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/marker": "^1.3.0",
+    "@editorjs/paragraph": "^2.9.0",
+    "@editorjs/quote": "^2.5.0",
+    "@editorjs/raw": "^2.4.0",
+    "@editorjs/simple-image": "^1.5.1",
+    "@editorjs/table": "^2.2.0",
+    "@editorjs/warning": "^1.3.0",
     "@types/lodash": "^4.14.186",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.2.2",
@@ -18,6 +35,7 @@
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.6",
     "react-dom": "^18.2.0",
+    "react-editor-js": "^2.1.0",
     "react-icons": "^4.4.0",
     "react-is": "^18.2.0",
     "react-router-dom": "^6.4.2",
