--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/uuid": "^9",
     "prettier": "^2.7.1",
     "typescript": "4.8"
   },
@@ -14,5 +15,8 @@
     "./client",
     "./server"
   ],
-  "packageManager": "yarn@3.2.4"
+  "packageManager": "yarn@3.2.4",
+  "dependencies": {
+    "uuid": "^9.0.0"
+  }
 }
