--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "dev": "nest start --watch --preserveWatchOutput",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "migrateandstart": "yarn typeorm migration:run -d datasource.js && yarn start:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
