--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@types/lodash": "^4.14.186",
     "@types/styled-components": "^5.1.26",
     "array-move": "^4.0.0",
     "axios": "^1.2.2",
-    "framer-motion": "^8.4.0",
+    "framer-motion": "^10.12.16",
     "howler": "^2.2.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
