✨ feat: detailed novel page

--- a/server/.env.example
+++ b/server/.env.example
@@ -2,6 +2,12 @@ DB_URL=postgresql://postgres:paring@db:5432/muvel
 
 JWT_SECRET=secret
 
+# Kimustory OAuth 2.0
+KIMUSTORY_CLIENT_ID=
+KIMUSTORY_CLIENT_SECRET=
+KIMUSTORY_CALLBACK_URL=https://test.kimusoft.dev/api/auth/login
+
+# Discord OAuth 2.0 (deprecated)
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
-DISCORD_CALLBACK_URL=https://vite-dev.kimusoft.dev/api/auth/login/discord
+DISCORD_CALLBACK_URL=https://test.kimusoft.dev/api/auth/login/discord
