--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "devDependencies": {
     "@types/uuid": "^9",
     "prettier": "^2.7.1",
-    "typescript": "4.8"
+    "typescript": "^5.1.5"
   },
   "scripts": {
     "dev": "yarn workspaces foreach -pi run dev"
@@ -17,6 +17,7 @@
   ],
   "packageManager": "yarn@3.2.4",
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "uuid": "^9.0.0"
   }
 }
