--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@types/styled-components": "^5.1.26",
     "array-move": "^4.0.0",
     "axios": "^1.2.2",
+    "formik": "^2.4.2",
     "framer-motion": "^10.12.16",
     "howler": "^2.2.3",
     "lodash": "^4.17.21",
