--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@types/styled-components": "^5.1.26",
     "array-move": "^4.0.0",
     "axios": "^1.2.2",
+    "canvas-confetti": "^1.6.0",
     "formik": "^2.4.2",
     "framer-motion": "^10.12.16",
     "howler": "^2.2.3",
@@ -32,6 +33,7 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.0",
     "@types/howler": "^2",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
