--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - pg-data:/data/db
+      - pg-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=paring
       - POSTGRES_DB=muvel
