✨ feat: 소설 내 검색 기능 구현

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,5 +10,13 @@ services:
       - POSTGRES_PASSWORD=paring
       - POSTGRES_DB=muvel
 
+  meilisearch:
+    image: getmeili/meilisearch:latest
+    restart: always
+    volumes:
+      - ./data.ms:/data.ms
+    ports:
+      - 7700:7700
+
 volumes:
   pg-data:
