--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-sortable-hoc": "^2.0.0",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
+    "uuid": "^9.0.0",
     "zod": "^3.20.2"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/howler": "^2",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^9",
     "@vitejs/plugin-react": "^2.1.0",
     "typescript": "4.8",
     "vite": "^3.1.0"
