--- a/server/package.json
+++ b/server/package.json
@@ -30,11 +30,16 @@
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^7.0.1",
     "@nestjs/typeorm": "^9.0.1",
+    "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "meilisearch": "^0.33.0",
     "passport": "^0.6.0",
     "passport-discord": "^0.1.4",
     "passport-jwt": "^4.0.1",
+    "passport-oauth2": "^1.7.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
@@ -46,9 +51,11 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "29.2.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.11.18",
     "@types/passport": "^0",
     "@types/passport-discord": "^0",
+    "@types/passport-oauth2": "^1",
     "@types/pg": "^8",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -64,7 +71,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.1",
-    "typescript": "^4.7.4"
+    "typescript": "4.7"
   },
   "jest": {
     "moduleFileExtensions": [
