🚀 feat: meilisearch env 항목 추가

--- a/server/.env.example
+++ b/server/.env.example
@@ -2,6 +2,9 @@ DB_URL=postgresql://postgres:paring@db:5432/muvel
 
 JWT_SECRET=secret
 
+# MeiliSearch
+MEILISEARCH_HOST=http://meilisearch:7700
+
 # Kimustory OAuth 2.0
 KIMUSTORY_CLIENT_ID=
 KIMUSTORY_CLIENT_SECRET=
