--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.14.1",
     "react-sortable-hoc": "^2.0.0",
     "react-toastify": "^9.1.1",
+    "recoil": "^0.7.7",
     "styled-components": "^6.0.2",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
