--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -14,9 +14,10 @@ services:
     image: getmeili/meilisearch:latest
     restart: always
     volumes:
-      - ./data.ms:/data.ms
+      - meili_data:/meili_data
     ports:
       - 7700:7700
 
 volumes:
   pg-data:
+  meili_data:
