--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "array-move": "^4.0.0",
     "axios": "^1.4.0",
+    "browser-image-compression": "^2.0.2",
     "canvas-confetti": "^1.6.0",
     "formik": "^2.4.2",
     "framer-motion": "^10.12.16",
