--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "meilisearch": "^0.33.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-discord": "^0.1.4",
     "passport-jwt": "^4.0.1",
