--- a/client/package.json
+++ b/client/package.json
@@ -24,10 +24,12 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-is": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "react-router-dom": "^6.14.1",
     "react-sortable-hoc": "^2.0.0",
     "react-toastify": "^9.1.1",
     "recoil": "^0.7.7",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^6.0.2",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
