--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@air/react-drag-to-select": "^5.0.8",
-    "@blocknote/core": "^0.11.0",
-    "@blocknote/react": "^0.11.0",
     "@chakra-ui/react": "^2.7.1",
     "@chakra-ui/theme-tools": "^2.1.2",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "array-move": "^4.0.0",
