feat: db auto sync 기능 추가

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
-APP_KEYS=
-ADMIN_JWT_SECRET=
-API_TOKEN_SALT=
+# Auth
+JWT_SECRET=secret
+
+# Database
+DB_URL=postgresql://postgres:paring@db:5432/muvel
+AUTO_SYNC_DB=true
+
+# MeiliSearch
+MEILISEARCH_HOST=http://meilisearch:7700
+
+# Kimustory OAuth 2.0
+KIMUSTORY_CLIENT_ID=
+KIMUSTORY_CLIENT_SECRET=
+KIMUSTORY_CALLBACK_URL=https://test.kimusoft.dev/api/auth/login
