--- a/packages/client-new/package.json
+++ b/packages/client-new/package.json
@@ -16,6 +16,9 @@
     "@emotion/react": "^11.14.0",
     "@react-router/node": "^7.5.0",
     "@react-router/serve": "^7.5.0",
+    "axios": "^1.4.0",
+    "cookie": "^1.0.2",
+    "formik": "^2.4.2",
     "isbot": "^5.1.17",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
