--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -1,4 +1,5 @@
 DB_URL=postgresql://postgres:paring@db:5432/muvel
+AUTO_SYNC_DB=false
 
 JWT_SECRET=secret
 
@@ -9,8 +10,3 @@ MEILISEARCH_HOST=http://meilisearch:7700
 KIMUSTORY_CLIENT_ID=
 KIMUSTORY_CLIENT_SECRET=
 KIMUSTORY_CALLBACK_URL=https://test.kimusoft.dev/api/auth/login
-
-# Discord OAuth 2.0 (deprecated)
-DISCORD_CLIENT_ID=
-DISCORD_CLIENT_SECRET=
-DISCORD_CALLBACK_URL=https://test.kimusoft.dev/api/auth/login/discord
