--- a/packages/client-new/package.json
+++ b/packages/client-new/package.json
@@ -17,21 +17,32 @@
     "@react-router/node": "^7.5.0",
     "@react-router/serve": "^7.5.0",
     "axios": "^1.4.0",
+    "canvas-confetti": "^1.6.0",
     "cookie": "^1.0.2",
+    "dedent": "^1.5.3",
     "formik": "^2.4.2",
+    "immer": "^10.1.1",
     "isbot": "^5.1.17",
+    "lodash": "^4.17.21",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^19.0.0",
-    "react-icons": "^4.10.1",
-    "react-router": "^7.5.0"
+    "react-icons": "^4.12.0",
+    "react-router": "^7.5.0",
+    "uuid": "^9.0.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@chakra-ui/cli": "^3.16.0",
     "@react-router/dev": "^7.5.0",
     "@tailwindcss/vite": "^4.0.0",
+    "@types/canvas-confetti": "^1.6.0",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "@types/uuid": "^9",
     "prettier": "^3.5.3",
     "react-router-devtools": "^1.1.0",
     "tailwindcss": "^4.0.0",
