--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,5 @@
 name: Docker
+
 on:
   push:
     branches:
@@ -6,39 +7,58 @@ on:
   release:
     types:
       - published
+
 jobs:
-  docker:
+  build-and-push:
     runs-on: ubuntu-latest
     permissions:
       packages: write
       contents: read
+    strategy:
+      matrix:
+        service:
+          - name: api
+            dockerfile: Dockerfile.server
+            image: ghcr.io/kimusoft/muvel-api
+          - name: web
+            dockerfile: Dockerfile.client
+            image: ghcr.io/kimusoft/muvel-web
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           submodules: true
+
       - uses: docker/setup-buildx-action@v1
         id: buildx
         with:
           platforms: linux/amd64,linux/arm64
 
-      - name: Login to container registry
+      - name: Login to GHCR
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Docker meta
+
+      - name: Docker meta for ${{ matrix.service.name }}
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/kimusoft/muvel
-      - name: Build and push Docker image
+          images: ${{ matrix.service.image }}
+          tags: |
+            type=sha
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+
+      - name: Build and push ${{ matrix.service.name }}
         uses: docker/build-push-action@v6
         with:
           context: .
+          file: ${{ matrix.service.dockerfile }}
           tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.output.labels }}
+          labels: ${{ steps.meta.outputs.labels }}
           push: true
           builder: ${{ steps.buildx.outputs.name }}
           platforms: linux/amd64,linux/arm64
