--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,6 +20,7 @@
     "canvas-confetti": "^1.6.0",
     "cookie": "^1.0.2",
     "dedent": "^1.5.3",
+    "dotenv": "^16.3.1",
     "formik": "^2.4.2",
     "immer": "^10.1.1",
     "isbot": "^5.1.17",
@@ -38,7 +39,7 @@
     "react": "^19.0.0",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^19.0.0",
-    "react-icons": "^4.12.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.5.0",
     "react-spinners": "^0.16.1",
     "uuid": "^9.0.0",
