--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -35,6 +35,7 @@
     "prosemirror-model": "^1.25.0",
     "prosemirror-schema-basic": "^1.2.4",
     "prosemirror-state": "^1.4.3",
+    "prosemirror-transform": "^1.10.4",
     "prosemirror-view": "^1.39.1",
     "react": "^19.0.0",
     "react-contenteditable": "^3.3.7",
