feat: 위젯 구현 및 ai 분석 기능 구현

--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -10,3 +10,6 @@ MEILISEARCH_HOST=http://meilisearch:7700
 KIMUSTORY_CLIENT_ID=
 KIMUSTORY_CLIENT_SECRET=
 KIMUSTORY_CALLBACK_URL=https://test.kimusoft.dev/api/auth/login
+
+# Gemini
+GEMINI_API_KEY=
