--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -28,6 +28,7 @@
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/schedule": "^6.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^7.0.1",
     "@nestjs/typeorm": "^9.0.1",
