--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -21,6 +21,7 @@ FROM node:22-alpine
 RUN corepack enable && corepack prepare pnpm@latest --activate
 
 WORKDIR /app
+ENV TZ=Asia/Seoul
 
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/packages/client ./packages/client
