--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -19,6 +19,7 @@ RUN pnpm --filter server build
 FROM node:22-alpine
 
 RUN corepack enable && corepack prepare pnpm@latest --activate
+ENV TZ=Asia/Seoul
 
 WORKDIR /app
 
