--- a/package.json
+++ b/package.json
@@ -16,9 +16,5 @@
     "build:c": "pnpm build:client",
     "build:a": "pnpm build:api"
   },
-  "packageManager": "pnpm@10.9.0",
-  "dependencies": {
-    "@nestjs/cache-manager": "^3.0.1",
-    "cache-manager": "^6.4.2"
-  }
+  "packageManager": "pnpm@10.10.0"
 }
