--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -22,78 +22,53 @@
     "migrate": "pnpm build && pnpm typeorm migration:generate src/migrations/init -d datasource.js && pnpm build && pnpm typeorm migration:run -d datasource.js"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.0",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/jwt": "^10.0.1",
-    "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
+    "@google/generative-ai": "^0.24.1",
+    "@nestjs/common": "^11.1.0",
+    "@nestjs/core": "^11.1.0",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.1.0",
     "@nestjs/schedule": "^6.0.0",
-    "@nestjs/serve-static": "^3.0.0",
-    "@nestjs/swagger": "^7.0.1",
-    "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/swagger": "^11.1.6",
+    "@nestjs/typeorm": "^11.0.0",
     "@types/passport-jwt": "^4.0.1",
-    "axios": "^1.8.2",
+    "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
+    "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "meilisearch": "^0.33.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "meilisearch": "^0.50.0",
     "muvel-api-types": "workspace:^",
-    "passport": "^0.6.0",
-    "passport-discord": "^0.1.4",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "passport-oauth2": "^1.7.0",
-    "pg": "^8.8.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
-    "typeorm": "^0.3.11"
+    "passport-oauth2": "^1.8.0",
+    "pg": "^8.15.6",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
+    "typeorm": "^0.3.22"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/cli": "^11.0.7",
+    "@nestjs/schematics": "^11.0.5",
     "@types/cookie-parser": "^1.4.8",
-    "@types/express": "^4.17.17",
-    "@types/jest": "29.2.4",
-    "@types/multer": "^1.4.7",
-    "@types/node": "18.11.18",
-    "@types/passport": "^0",
-    "@types/passport-discord": "^0",
-    "@types/passport-oauth2": "^1",
-    "@types/pg": "^8",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "29.3.1",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "29.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.1",
-    "typescript": "4.7"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "@types/express": "^5.0.1",
+    "@types/node": "22.15.3",
+    "@types/passport": "^1.0.17",
+    "@types/passport-oauth2": "^1.4.17",
+    "@types/pg": "^8.11.14",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
+    "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "prettier": "^3.5.3",
+    "source-map-support": "^0.5.21",
+    "supertest": "^7.1.0",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "~5.8.3"
   }
 }
