--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -38,9 +38,11 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "googleapis": "^148.0.0",
     "meilisearch": "^0.50.0",
     "muvel-api-types": "workspace:^",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-oauth2": "^1.8.0",
     "pg": "^8.15.6",
@@ -55,6 +57,7 @@
     "@types/express": "^5.0.1",
     "@types/node": "22.15.3",
     "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-oauth2": "^1.4.17",
     "@types/pg": "^8.11.14",
     "@types/supertest": "^6.0.3",
