feat: tauri 베이스 세팅

--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -18,3 +18,4 @@ GEMINI_API_KEY=
 GOOGLE_CLIENT_ID=your_client_id_here
 GOOGLE_CLIENT_SECRET=your_secret_here
 GOOGLE_CALLBACK_URL=https://test.kimustory.net/api/google-drive/redirect
+GOOGLE_ENCRYPTION_KEY=
