--- a/packages/tauri-app/package.json
+++ b/packages/tauri-app/package.json
@@ -10,6 +10,8 @@
     "@tauri-apps/cli": "^2.5.0"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.5.0"
+    "@tauri-apps/api": "^2.5.0",
+    "@tauri-apps/plugin-deep-link": "~2.2.1",
+    "@tauri-apps/plugin-opener": "~2.2.6"
   }
 }
