--- a/packages/tauri-app/src-tauri/Cargo.toml
+++ b/packages/tauri-app/src-tauri/Cargo.toml
@@ -27,4 +27,6 @@ tauri-plugin-opener = "2"
 tauri-plugin-deep-link = "2"
 url = "2.5.4"
 tiny_http = "0.12.0"
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 font-kit = "0.11"
