refactor: 이 코드 망함

--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -19,3 +19,7 @@ GOOGLE_CLIENT_ID=your_client_id_here
 GOOGLE_CLIENT_SECRET=your_secret_here
 GOOGLE_CALLBACK_URL=https://test.kimustory.net/api/google-drive/redirect
 GOOGLE_ENCRYPTION_KEY=
+
+# Crdt
+USE_YJS_SYNC=true
+REDIS_URL=
