--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,6 +22,7 @@
     "@tauri-apps/plugin-opener": "^2.2.6",
     "@xyflow/react": "^12.6.0",
     "axios": "^1.8.4",
+    "buffer": "^6.0.3",
     "canvas-confetti": "^1.6.0",
     "cookie": "^1.0.2",
     "dedent": "^1.5.3",
@@ -31,6 +32,7 @@
     "immer": "^10.1.1",
     "isbot": "^5.1.17",
     "lodash-es": "^4.17.21",
+    "mitt": "^3.0.1",
     "motion": "^12.7.4",
     "muvel-api-types": "workspace:^",
     "next-themes": "^0.4.6",
@@ -49,6 +51,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.5.0",
     "react-spinners": "^0.16.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^9.0.0",
     "y-indexeddb": "^9.0.12",
     "y-prosemirror": "^1.3.4",
