--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,16 +23,21 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@nestjs/bull": "^11.0.2",
     "@nestjs/common": "^11.1.0",
     "@nestjs/core": "^11.1.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.0",
+    "@nestjs/platform-socket.io": "^11.1.0",
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.1.6",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.1.0",
+    "@socket.io/redis-adapter": "^8.3.0",
     "@types/passport-jwt": "^4.0.1",
     "axios": "^1.9.0",
+    "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
@@ -46,9 +51,15 @@
     "passport-jwt": "^4.0.1",
     "passport-oauth2": "^1.8.0",
     "pg": "^8.15.6",
+    "prosemirror-model": "^1.25.1",
+    "prosemirror-state": "^1.4.3",
+    "redis": "^5.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
-    "typeorm": "^0.3.22"
+    "socket.io": "^4.8.1",
+    "typeorm": "^0.3.22",
+    "y-prosemirror": "^1.3.4",
+    "yjs": "^13.6.26"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.7",
