--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -25,6 +25,7 @@
     "canvas-confetti": "^1.6.0",
     "cookie": "^1.0.2",
     "dedent": "^1.5.3",
+    "dexie": "^4.0.11",
     "dotenv": "^16.3.1",
     "formik": "^2.4.2",
     "immer": "^10.1.1",
@@ -49,6 +50,9 @@
     "react-router": "^7.5.0",
     "react-spinners": "^0.16.1",
     "uuid": "^9.0.0",
+    "y-indexeddb": "^9.0.12",
+    "y-prosemirror": "^1.3.4",
+    "yjs": "^13.6.26",
     "zod": "^3.21.4"
   },
   "devDependencies": {
