feat: 버전 표기 추가

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "private": true,
+  "version": "2.2.5",
   "type": "module",
   "scripts": {
     "build": "react-router build",
