--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
-    "howler": "^2.2.4"
+    "@chakra-ui/charts": "^3.17.0",
+    "howler": "^2.2.4",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@types/howler": "^2.2.12"
