--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,6 +20,7 @@
     "@react-router/node": "^7.5.0",
     "@react-router/serve": "^7.5.0",
     "@tauri-apps/api": "^2.5.0",
+    "@tauri-apps/plugin-dialog": "^2.2.1",
     "@tauri-apps/plugin-opener": "^2.2.6",
     "@xyflow/react": "^12.6.0",
     "axios": "^1.8.4",
