--- a/packages/tauri-app/src-tauri/Cargo.toml
+++ b/packages/tauri-app/src-tauri/Cargo.toml
@@ -27,6 +27,8 @@ tauri-plugin-opener = "2"
 tauri-plugin-deep-link = "2"
 url = "2.5.4"
 tiny_http = "0.12.0"
+uuid = { version = "1.16.0", features = ["v4"] }
+chrono = "0.4.41"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 font-kit = "0.11"
