--- a/packages/tauri-app/src-tauri/Cargo.toml
+++ b/packages/tauri-app/src-tauri/Cargo.toml
@@ -29,6 +29,9 @@ url = "2.5.4"
 tiny_http = "0.12.0"
 uuid = { version = "1.16.0", features = ["v4"] }
 chrono = "0.4.41"
+tauri-plugin-dialog = "2.2.1"
+serde_repr = "0.1.20"
+slug = "0.1.6"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 font-kit = "0.11"
