--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "muvel",
+  "version": "2.3.0",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -18,7 +19,8 @@
     "build:s": "pnpm build:server",
     "build:c": "pnpm build:client",
     "build:a": "pnpm build:api",
-    "build:t": "pnpm build:tauri"
+    "build:t": "pnpm build:tauri",
+    "build:tauri:prod": "pnpm build:tauri"
   },
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
