--- a/.github/workflows/tauri-relaese.yml
+++ b/.github/workflows/tauri-relaese.yml
@@ -31,6 +31,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev
 
+      # macOS에서는 webkitgtk 불필요하므로 설치 제거
       - name: Install dependencies (macOS)
         if: matrix.os == 'macos-latest'
         run: |
@@ -48,6 +49,9 @@ jobs:
 
       - name: Install app dependencies
         run: pnpm install
+
+      - name: Build API types package  # muvel-api-types 빌드 사전 수행
+        run: pnpm build:api
 
       - name: Build Tauri app
         run: pnpm run build:tauri:prod -- --target ${{ matrix.target }}
@@ -113,6 +117,9 @@ jobs:
             echo "Android SDK not properly installed"
             exit 1
           fi
+
+      - name: Build API types package  # muvel-api-types 빌드 사전 수행
+        run: pnpm build:api
 
       - name: Build Tauri Android app
         run: pnpm run build:tauri:prod -- --target android
