--- a/packages/tauri-app/src-tauri/Cargo.toml
+++ b/packages/tauri-app/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "app"
-version = "0.1.0"
-description = "A Tauri App"
+name = "muvel"
+version = "2.3.0"
+description = "Web-Novel Editor"
 authors = ["you"]
 license = ""
 repository = ""
