--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,6 +32,7 @@
     "@nestjs/swagger": "^11.1.6",
     "@nestjs/typeorm": "^11.0.0",
     "@types/passport-jwt": "^4.0.1",
+    "@types/semver": "^7.7.0",
     "axios": "^1.9.0",
     "cache-manager": "^6.4.3",
     "class-transformer": "^0.5.1",
@@ -49,6 +50,7 @@
     "pg": "^8.15.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
+    "semver": "^7.7.1",
     "typeorm": "^0.3.22"
   },
   "devDependencies": {
