feat: 다운로드 링크 유지용

--- a/.github/workflows/tauri-release2.yml
+++ b/.github/workflows/tauri-release2.yml
@@ -6,6 +6,9 @@ on:
   workflow_dispatch:
 
 jobs:
+  # ─────────────────────────────────────────────────────────────
+  # 1) Build & Release (tauri-action per platform)
+  # ─────────────────────────────────────────────────────────────
   publish-tauri:
     permissions:
       contents: write   # allow creating releases & uploading assets
@@ -13,19 +16,19 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # ─── Windows ────────────────────────────
+          # Windows
           - platform: windows-latest
             target: x86_64-pc-windows-msvc
             args: ''
-          # ─── macOS (Intel) ──────────────────────
+          # macOS (Intel)
           - platform: macos-latest
             target: x86_64-apple-darwin
             args: '--target x86_64-apple-darwin'
-          # ─── macOS (Apple Silicon) ─────────────
+          # macOS (Apple Silicon)
           - platform: macos-latest
             target: aarch64-apple-darwin
             args: '--target aarch64-apple-darwin'
-          # ─── Linux ─────────────────────────────
+          # Linux
           - platform: ubuntu-22.04
             target: x86_64-unknown-linux-gnu
             args: '--target x86_64-unknown-linux-gnu'
@@ -33,29 +36,21 @@ jobs:
     runs-on: ${{ matrix.platform }}
 
     steps:
-      # 1️⃣ Check out source
       - uses: actions/checkout@v4
 
-      # 2️⃣ Install pnpm (must precede setup‑node caching)
       - uses: pnpm/action-setup@v2
-        with:
-          version: 10
+        with: { version: 10 }
 
-      # 3️⃣ Node.js — enables pnpm‑lock cache
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
+          cache: pnpm
 
-      # 4️⃣ Cache Rust artifacts
       - uses: Swatinem/rust-cache@v2
 
-      # 5️⃣ Install Rust toolchain & cross‑targets
       - uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: ${{ matrix.target }}
+        with: { targets: ${{ matrix.target }} }
 
-      # 6️⃣ System packages for GTK / WebKit (Linux only)
       - name: Install Linux dependencies
         if: matrix.platform == 'ubuntu-22.04'
         run: |
@@ -70,25 +65,19 @@ jobs:
         if: startsWith(matrix.platform, 'macos')
         run: brew update || true
 
-      # 7️⃣ Install JS workspace deps
       - run: pnpm install
 
-      # 8️⃣ Build API types
       - name: Build API types
         run: pnpm build:api
 
-      # 9️⃣ Build, sign & release via tauri‑action
       - uses: tauri-apps/tauri-action@v0.5.16
         env:
-          GITHUB_TOKEN: ${{ secrets.PUBLIC_REPO_TOKEN }}   # write access to muvel-public
-          # Tauri 2.x uses TAURI_PRIVATE_KEY, older bundlers expect TAURI_SIGNING_PRIVATE_KEY
+          GITHUB_TOKEN: ${{ secrets.PUBLIC_REPO_TOKEN }}
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
-          # backward‑compat env names (no harm if unused)
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
-          # — Repo / tag info —
           owner: KimuSoft
           repo: muvel-public
           tagName: v__VERSION__
@@ -98,14 +87,56 @@ jobs:
             아직 개발자가 설명을 작성하지 않았습니다.
           releaseDraft: false
           prerelease: true
-
-          # — Paths (monorepo) —
           projectPath: packages/tauri-app
           tauriScript: pnpm tauri
-
-          # — Updater JSON —
-          includeUpdaterJson: true        # latest.json + .sig 업로드
-          updaterJsonPreferNsis: true     # Windows는 setup.exe 우선
-
-          # — Extra build flags per matrix —
+          includeUpdaterJson: true
+          updaterJsonPreferNsis: true
           args: ${{ matrix.args }}
+
+  # ─────────────────────────────────────────────────────────────
+  # 2) Copy assets to constant‑name files (one run after all builds)
+  # ─────────────────────────────────────────────────────────────
+  copy-constant-assets:
+    runs-on: ubuntu-latest
+    needs: publish-tauri
+    permissions:
+      contents: write
+    env:
+      GH_TOKEN: ${{ secrets.PUBLIC_REPO_TOKEN }}
+    steps:
+      - uses: actions/checkout@v4
+        with: { fetch-depth: 0 }
+
+      - name: Find version
+        id: ver
+        run: echo "version=$(jq -r .version package.json)" >> "$GITHUB_OUTPUT"
+
+      - name: Upload constant‑name assets
+        run: |
+          VERSION=${{ steps.ver.outputs.version }}
+          REPO="KimuSoft/muvel-public"
+
+          # Windows NSIS installer
+          gh release upload "v$VERSION" \
+            packages/tauri-app/src-tauri/target/x86_64-pc-windows-msvc/release/bundle/nsis/*-setup.exe \
+            --repo "$REPO" --clobber --name muvel-latest-windows-x64-setup.exe
+
+          # Windows portable EXE
+          gh release upload "v$VERSION" \
+            packages/tauri-app/src-tauri/target/release/muvel.exe \
+            --repo "$REPO" --clobber --name muvel-latest-windows-x64.exe
+
+          # macOS DMG (Intel)
+          gh release upload "v$VERSION" \
+            packages/tauri-app/src-tauri/target/x86_64-apple-darwin/release/bundle/dmg/*.dmg \
+            --repo "$REPO" --clobber --name muvel-latest-macos-x64.dmg
+
+          # macOS DMG (Apple Silicon)
+          gh release upload "v$VERSION" \
+            packages/tauri-app/src-tauri/target/aarch64-apple-darwin/release/bundle/dmg/*.dmg \
+            --repo "$REPO" --clobber --name muvel-latest-macos-arm64.dmg
+
+          # Linux AppImage
+          gh release upload "v$VERSION" \
+            packages/tauri-app/src-tauri/target/x86_64-unknown-linux-gnu/release/bundle/appimage/*.AppImage \
+            --repo "$REPO" --clobber --name muvel-latest-linux-x64.AppImage
