fix: __VERSION__ 사용하지 않음

--- a/.github/workflows/tauri-action.yml
+++ b/.github/workflows/tauri-action.yml
@@ -71,6 +71,10 @@ jobs:
       - name: Build API types
         run: pnpm build:api
 
+      - name: Get package.json version
+        id: package_version
+        run: echo "PACKAGE_VERSION=$(jq -r .version package.json)" >> $GITHUB_OUTPUT
+
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.PUBLIC_REPO_TOKEN }}
@@ -81,10 +85,10 @@ jobs:
         with:
           owner: KimuSoft
           repo: muvel-public
-          tagName: v__VERSION__
-          releaseName: "Muvel v__VERSION__"
+          tagName: v${{ steps.package_version.outputs.PACKAGE_VERSION }}
+          releaseName: "Muvel v${{ steps.package_version.outputs.PACKAGE_VERSION }}"
           releaseBody: |
-            ## 뮤블 v__VERSION__ 버전 업데이트
+            ## 뮤블 v${{ steps.package_version.outputs.PACKAGE_VERSION }} 버전 업데이트
             아직 개발자가 설명을 작성하지 않았습니다.
           releaseDraft: false
           prerelease: true
