--- a/.github/workflows/tauri-action.yml
+++ b/.github/workflows/tauri-action.yml
@@ -73,8 +73,12 @@ jobs:
 
       - name: Get package.json version
         id: package_version
-        run: echo "PACKAGE_VERSION=$(jq -r .version package.json)" >> $GITHUB_OUTPUT
+        run: |
+          VERSION=$(jq -r .version package.json)
+          echo "PACKAGE_VERSION=$VERSION" >> "$GITHUB_OUTPUT"
+          echo "Detected package.json version → $VERSION"
 
+      # 주의: 현재 해당 버전의 태그와 릴리즈를 미리 작성해야 작동함!
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.PUBLIC_REPO_TOKEN }}
@@ -85,11 +89,9 @@ jobs:
         with:
           owner: KimuSoft
           repo: muvel-public
-          tagName: v${{ steps.package_version.outputs.PACKAGE_VERSION }}
-          releaseName: "Muvel v${{ steps.package_version.outputs.PACKAGE_VERSION }}"
-          releaseBody: |
-            ## 뮤블 v${{ steps.package_version.outputs.PACKAGE_VERSION }} 버전 업데이트
-            아직 개발자가 설명을 작성하지 않았습니다.
+          tagName: v__VERSION__
+          releaseName: "Muvel v__VERSION__"
+          releaseBody: 아직 개발자가 설명을 작성하지 않았습니다.
           projectPath: packages/tauri-app
           tauriScript: pnpm tauri
           includeUpdaterJson: true
