--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,6 +22,8 @@
     "@tauri-apps/api": "^2.5.0",
     "@tauri-apps/plugin-dialog": "^2.2.1",
     "@tauri-apps/plugin-opener": "^2.2.6",
+    "@tauri-apps/plugin-process": "^2.2.1",
+    "@tauri-apps/plugin-updater": "~2.7.1",
     "@xyflow/react": "^12.6.0",
     "axios": "^1.8.4",
     "canvas-confetti": "^1.6.0",
