--- a/packages/tauri-app/src-tauri/Cargo.toml
+++ b/packages/tauri-app/src-tauri/Cargo.toml
@@ -35,3 +35,4 @@ slug = "0.1.6"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 font-kit = "0.11"
+tauri-plugin-updater = "2"
