--- a/.github/workflows/tauri-action.yml
+++ b/.github/workflows/tauri-action.yml
@@ -93,47 +93,47 @@ jobs:
   # ─────────────────────────────────────────────────────────────
   # 2) Copy assets to constant‑name files (one run after all builds)
   # ─────────────────────────────────────────────────────────────
-  copy-constant-assets:
-    runs-on: ubuntu-latest
-    needs: publish-tauri
-    permissions:
-      contents: write
-    env:
-      GH_TOKEN: ${{ secrets.PUBLIC_REPO_TOKEN }}
-    steps:
-      - uses: actions/checkout@v4
-        with: { fetch-depth: 0 }
-
-      - name: Find version
-        id: ver
-        run: echo "version=$(jq -r .version package.json)" >> "$GITHUB_OUTPUT"
-
-      - name: Upload constant‑name assets
-        run: |
-          VERSION=${{ steps.ver.outputs.version }}
-          REPO="KimuSoft/muvel-public"
-
-          # Windows NSIS installer
-          gh release upload "v$VERSION" \
-            packages/tauri-app/src-tauri/target/x86_64-pc-windows-msvc/release/bundle/nsis/*-setup.exe \
-            --repo "$REPO" --clobber --name muvel-latest-windows-x64-setup.exe
-
-          # Windows portable EXE
-          gh release upload "v$VERSION" \
-            packages/tauri-app/src-tauri/target/release/muvel.exe \
-            --repo "$REPO" --clobber --name muvel-latest-windows-x64.exe
-
-          # macOS DMG (Intel)
-          gh release upload "v$VERSION" \
-            packages/tauri-app/src-tauri/target/x86_64-apple-darwin/release/bundle/dmg/*.dmg \
-            --repo "$REPO" --clobber --name muvel-latest-macos-x64.dmg
-
-          # macOS DMG (Apple Silicon)
-          gh release upload "v$VERSION" \
-            packages/tauri-app/src-tauri/target/aarch64-apple-darwin/release/bundle/dmg/*.dmg \
-            --repo "$REPO" --clobber --name muvel-latest-macos-arm64.dmg
-
-          # Linux AppImage
-          gh release upload "v$VERSION" \
-            packages/tauri-app/src-tauri/target/x86_64-unknown-linux-gnu/release/bundle/appimage/*.AppImage \
-            --repo "$REPO" --clobber --name muvel-latest-linux-x64.AppImage
+#  copy-constant-assets:
+#    runs-on: ubuntu-latest
+#    needs: publish-tauri
+#    permissions:
+#      contents: write
+#    env:
+#      GH_TOKEN: ${{ secrets.PUBLIC_REPO_TOKEN }}
+#    steps:
+#      - uses: actions/checkout@v4
+#        with: { fetch-depth: 0 }
+#
+#      - name: Find version
+#        id: ver
+#        run: echo "version=$(jq -r .version package.json)" >> "$GITHUB_OUTPUT"
+#
+#      - name: Upload constant‑name assets
+#        run: |
+#          VERSION=${{ steps.ver.outputs.version }}
+#          REPO="KimuSoft/muvel-public"
+#
+#          # Windows NSIS installer
+#          gh release upload "v$VERSION" \
+#            packages/tauri-app/src-tauri/target/x86_64-pc-windows-msvc/release/bundle/nsis/*-setup.exe \
+#            --repo "$REPO" --clobber --name muvel-latest-windows-x64-setup.exe
+#
+#          # Windows portable EXE
+#          gh release upload "v$VERSION" \
+#            packages/tauri-app/src-tauri/target/release/muvel.exe \
+#            --repo "$REPO" --clobber --name muvel-latest-windows-x64.exe
+#
+#          # macOS DMG (Intel)
+#          gh release upload "v$VERSION" \
+#            packages/tauri-app/src-tauri/target/x86_64-apple-darwin/release/bundle/dmg/*.dmg \
+#            --repo "$REPO" --clobber --name muvel-latest-macos-x64.dmg
+#
+#          # macOS DMG (Apple Silicon)
+#          gh release upload "v$VERSION" \
+#            packages/tauri-app/src-tauri/target/aarch64-apple-darwin/release/bundle/dmg/*.dmg \
+#            --repo "$REPO" --clobber --name muvel-latest-macos-arm64.dmg
+#
+#          # Linux AppImage
+#          gh release upload "v$VERSION" \
+#            packages/tauri-app/src-tauri/target/x86_64-unknown-linux-gnu/release/bundle/appimage/*.AppImage \
+#            --repo "$REPO" --clobber --name muvel-latest-linux-x64.AppImage
